/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package question;

/**
 *
 * @author javat
 */
public enum QuestionType {
    BINARY,
    SINGLE,
    MULTIPLE,
    TEXT,
    TEXTFIELD,
    RATING
}